# coherence-sre

./: .dockerignore  .env.example  .gitattributes  .gitignore  BUILD_REPORT.txt  Dockerfile  LICENSE  MASTER_ASSET_MANIFEST.json  README.md  SOUL.md  auditor.py  clean_install_wsl.ps1  coherence.py  compliance_certificate.json  docker-compose.yml  fix_coherence.py  fix_wsl.ps1  mypy.ini  pyproject.toml  system_repair.ps1  test_correlation.py  test_detectors.py
.github/workflows/: main.yml
.identity/: drift_baseline.json
.identity/agency_log/: propagation_2026-03-29.json
examples/: flight_simulator.py
governance/: ISO_9001_ALIGNMENT.md
internal/: BUILD_REPORT.txt  SIGNATURE_VERIFICATION.md  integrity_manifest.txt
internal/assets/: DIB_Dossier.md  Resume_Senior_SRE_NIST.md  STRATEGIC_POSTURE.json
internal/research/labs/: lab_01_sqli.py  lab_02_ddos.py  lab_03_supply_chain.py
memory/vault/: DEAD_HAND.md
scripts/: gpg_wrapper.bat
src/coherence/: cli.py
src/coherence/core/: sentinel.py
src/coherence/correlation/: correlator.py
src/coherence/ingestion/: adapters.py  base.py  datadog.py
src/coherence/ui/: webapp.py
src/coherence_sre.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_correlation.py  test_detectors.py  test_signal_hygiene.py
