[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coherence-sre"
version = "0.3.0"
description = "A read-only SRE sentinel that detects system instability via variance, allocation rate, and amplification signals."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psutil",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy"
]
connectors = [
    "pandas",
    "datadog",
    "python-dotenv"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
